# send-emails-w-attachments

./: .gitignore  CMakeLists.txt  email_content.json  project_configuration.json  smtp_server_config.json
assets/: reminder_template.txt
emails/: new_invoice.txt  reminder.txt
include/: Constants.h  EmailHandler.h  EmailThread.h  JsonParser.h  NotebookAdapter.h  ProgramConfigurationHandler.h  SmtpServer.h
include/frames/: AbstractFrame.h  ErrorFrame.h  MainFrame.h
include/panels/: AbstractPanel.h  MainPanel.h  SendInvoicesPanel.h  SendRemindersPanel.h  StatusPanel.h
scripts/: E-mail beheer stil (shortcut voor op Windows).vbs  E-mail beheer.bat  build.bash  clean.bash  cppcheck.bash  run.bash
src/: EmailHandler.cpp  EmailThread.cpp  JsonParser.cpp  NotebookAdapter.cpp  ProgramConfigurationHandler.cpp  SmtpServer.cpp  main.cpp
src/frames/: AbstractFrame.cpp  ErrorFrame.cpp  MainFrame.cpp
src/panels/: AbstractPanel.cpp  MainPanel.cpp  SendInvoicesPanel.cpp  SendRemindersPanel.cpp  StatusPanel.cpp
